maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:63: error: not found: value x
    var num = getIndication(x,y)
                            ^JediEscaper:63: error: not found: value y
    var num = getIndication(x,y)
                              ^